<resources>
    <string name="app_name">闲暇APP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_menu_read">分类</string>
    <string name="drawer_menu_options">选项</string>
    <string name="drawer_menu_setting">设置</string>
    <string name="drawer_menu_about">关于</string>

    <string name="drawer_menu_picture">图片分类</string>
    <string name="drawer_menu_video">视频专区</string>
    <string name="drawer_menu_area">文档分类</string>
    <string name="drawer_menu_mine">我的</string>
    <string name="drawer_menu_station">B站搜索</string>
    <!--这块内容可以选择 媒体或者图表-->
    <string name="drawer_menu_media">媒体入口</string>
    <string name="drawer_menu_favorite">收藏内容</string>


    <string name="share">分享</string>
    <string name="share_contents">来自妹子的分享：%1$s %2$s</string>

    <!-- 共享过度动画 引用的时候名字一定要相同-->
    <string name="transition_photos">transition_animation_news_photos</string>

    <!-- 底部导航标题 -->
    <string name="picture">图片</string>
    <string name="video">视频</string>
    <string name="navigation">导航</string>
    <string name="mine">我的</string>

    <!-- 设置 -->
    <string name="toolbar_title_setting">设置</string>
    <string name="pref_title_theme_switch">主题</string>
    <string name="pref_title_no_image_mode">无图模式</string>
    <string name="pref_summary_no_image_mode">非WIFI网络下不加载图片</string>
    <string name="pref_title_clear_cache">清除缓存</string>
    <string name="pref_title_version_info">版本号</string>
    <string name="pref_summary_version_info">v 1.0.0 (1)</string>
    <string name="pref_title_change_log">更新日志</string>
    <string name="pref_title_open_source_libraries">开源组件</string>
    <string name="pref_title_about">关于</string>
</resources>
