<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--侧滑菜单-->
    <item android:title="@string/drawer_menu_sorts">
        <menu>
            <item
                android:id="@+id/nav_menu_read"
                android:checkable="false"
                android:icon="@drawable/ic_menu_read"
                android:title="@string/drawer_menu_read"/>
            <item
                android:id="@+id/nav_menu_search"
                android:checkable="false"
                android:icon="@drawable/draw_picture"
                android:title="@string/drawer_menu_station"/>

            <item
                android:id="@+id/nav_menu_station"
                android:checkable="false"
                android:icon="@drawable/draw_diagrams"
                android:title="@string/drawer_menu_media"/>
            <item
                android:id="@+id/nav_menu_favorite"
                android:checkable="false"
                android:icon="@drawable/ic_menu_favorite"
                android:title="@string/drawer_menu_favorite"/>
        </menu>
    </item>

    <item android:title="@string/drawer_menu_options">
        <menu>
            <item
                android:id="@+id/nav_menu_setting"
                android:checkable="false"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/drawer_menu_setting" />
            <item
                android:id="@+id/nav_menu_about"
                android:checkable="false"
                android:icon="@drawable/drawer_about"
                android:title="@string/drawer_menu_about"/>
        </menu>
    </item>


</menu>